--- a/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -11,11 +11,11 @@
         <form (ngSubmit)="sendLogin()" [formGroup]="formLogin" class="login-auth-form">
             <div class="form-group">
                 <label for="email">Dirección de correo o nombre de usuario</label>
-                <input formControlName="email" type="text" placeholder="Dirección de correo o nombre de usuario" class="form-input">
+                <input id="email" formControlName="email" type="text" placeholder="Dirección de correo o nombre de usuario" class="form-input" autocomplete="username">
             </div>
             <div class="form-group">
                 <label for="password">Contraseña</label>
-                <input formControlName="password" type="password" placeholder="Contraseña" class="form-input">
+                <input id="password" formControlName="password" type="password" placeholder="Contraseña" class="form-input" autocomplete="current-password">
             </div>
             <div class="form-steps">
                 <a class="link" href="">¿Se te ha olvidado la contraseña?</a>
