Mostrar el progreso del reproductor, con linea de tiempo avanzando, botton play y pause, y tiempo de recorrido hacia adleante y atras

--- a/src/app/shared/components/media-player/media-player.component.html
+++ b/src/app/shared/components/media-player/media-player.component.html
@@ -40,22 +40,21 @@
             <button class="arrow btn">
                 <i class="uil uil-previous"></i>
             </button>
-            <button class="play btn">
-                <i class="uil "></i>
-
+            <button class="play btn" (click)="multimediaService.togglePlayer()">
+                <i [ngClass]="{'uil-pause-circle': state === 'playing', 'uil-play-circle': state === 'paused'}" class="uil"></i>
+                  
             </button>
             <button class="arrow btn">
                 <i class="uil uil-step-forward"></i>
             </button>
         </div>
         <div class="media-linetime">
-
-            <div class="time">00</div>
-            <span #progressBar class="time-progress">
-                <span class="time-progress-live" [style.width]="10+'%'">
+            <div class="time">{{multimediaService.timeElapsed$ | async}}</div>
+            <span class="time-progress">
+                <span class="time-progress-live" [style.width]="(multimediaService.playerPorcentage$ | async) + '%'">
                 </span>
             </span>
-            <div class="time">{{99}}</div>
+            <div class="time">{{multimediaService.timeRemaining$ | async}}</div>
         </div>
     </div>
 </ng-template>
