--- a/src/app/modules/tracks/pages/tracks-page/tracks-page.component.html
+++ b/src/app/modules/tracks/pages/tracks-page/tracks-page.component.html
@@ -1,4 +1,4 @@
-<div class="tracks-page">
+<div class="tracks-page" tabindex="0">
     <!-- section top (small) -->
     <app-section-generic [dataTracks]="tracksTrending" [mode]="'small'" [title]="'¡La mejor música del mundo!'" />
     <!--section medium (big)-->
