--- a/src/app/shared/components/card-player/card-player.component.html
+++ b/src/app/shared/components/card-player/card-player.component.html
@@ -6,7 +6,7 @@
         {{track.name}}
     </div>
     <div class="buttons-player">
-        <button *ngIf="true" class="play-btn">
+        <button *ngIf="true" class="play-btn" (click)="onClick()" (keydown)="preventKey($event)" aria-label="Reproducir pista">
             <i class="uil " [ngClass]="{'uil-play':true}"></i>
         </button>
         <button *ngIf="false" class="play-btn">
@@ -24,7 +24,7 @@
         <div class="sub-title-track">{{track.name}}</div>
     </div>
     <div class="buttons-player">
-        <button (click)="sendPlay(track)" *ngIf="true" class="play-btn">
+        <button (click)="onClick()" (keydown)="preventKey($event)" *ngIf="true" class="play-btn">
             <i class="uil " [ngClass]="{'uil-play':true}"></i>
         </button>
         <button *ngIf="false" class="play-btn">
