--- a/src/app/modules/history/components/search/search.component.css
+++ b/src/app/modules/history/components/search/search.component.css
@@ -10,3 +10,29 @@
     padding: 0 .75rem;
     font-size: 90%;
 }
+
+/* ===== RESPONSIVE DESIGN - MOBILE ONLY ===== */
+@media screen and (max-width: 768px) {
+    .search-component {
+        padding: 0 1rem;
+    }
+
+    .search-component input {
+        width: 100%;
+        max-width: 100%;
+        height: 36px;
+        font-size: 85%;
+        padding: 0 1rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .search-component {
+        padding: 0 0.5rem;
+    }
+
+    .search-component input {
+        height: 34px;
+        font-size: 80%;
+    }
+}
